data/derived/comb/progs/unify/prog2267.ml.out
Characters 63-64:
  let g x = truncate (1e6 *. cos (1e-6 *. float x)) in fixpoint (g, 0);;
                                                                 ^
Error: This expression has type int -> int
       but an expression was expected of type bool -> bool -> bool * bool
       Type int is not compatible with type bool 
